# OrbbecSDK_ROS2

./: .buildinfo  .clang-format  .cmake-format.py  .gitattributes  .gitignore  .make_deb.sh  IMU_INTEGRATION_REPORT.md  LICENSE  Lidar.MD  Lidar_CN.MD  NOTICE  README.MD  README.html  README_CN.MD  genindex.html  index.html  objects.inv  search.html  searchindex.js  test.sh
orbbec_camera/: .gitattributes  .make_deb.sh  CHANGELOG.rst  CMakeLists.txt  package.xml
orbbec_camera/SDK/lib/: libOrbbecSDK.so.1.3.1
orbbec_camera/cmake/: FindORBBEC_SDK.cmake
orbbec_camera/config/: OrbbecSDKConfig.xml  OrbbecSDKConfig_v1.0.xml  OrbbecSDKConfig_v2.0.xml  astra2.yaml  camera_335_params.yaml  camera_params.yaml  camera_params_cuvslam-640_360_30fps.yaml  camera_params_cuvslam-640_360_60fps.yaml  camera_params_cuvslam_nvblox-640_360_60fps.yaml  camera_params_nvblox-1280_800_30fps.yaml  camera_params_nvblox-640_360_30fps.yaml  camera_secondary_params.yaml  camera_secondary_params_cuvslam-640_360_60fps.yaml  camera_secondary_params_nvblox-1280_800_30fps.yaml  camera_secondary_params_nvblox-640_360_30fps.yaml  common.yaml  femto.yaml  femto_bolt.yaml  femto_mega.yaml  femtobolt.yaml  femtomega.yaml  gemini2.yaml  gemini2L.yaml  gemini330Lg_series.yaml  gemini330_series.yaml  multicamera.yaml  multicamera_synced.yaml  single_camera_params.yaml
orbbec_camera/config/depthfilter/: Gemini2_v1.7.json  Gemini2_v1.8.json  Openni_device.json
orbbec_camera/config/metadataexport/: metadata_params.json
orbbec_camera/config/multicamera_sync/: DevicesInfo.txt  StreamProfileInfo.txt
orbbec_camera/config/multicamera_test/: gemini330_series_sync_front_camera.yaml  gemini330_series_sync_left_camera.yaml  gemini330_series_sync_rear_camera.yaml  gemini330_series_sync_right_camera.yaml  gemini330_series_test1.yaml  gemini330_series_test2.yaml
orbbec_camera/dependencies/: .gitignore
orbbec_camera/examples/: README.MD
orbbec_camera/examples/435le_new_interface/: README.MD  camera_example_node.cpp
orbbec_camera/examples/align_depth_color/: README.MD
orbbec_camera/examples/benchmark/: README.MD  gemini_330_series_benchmark.launch.py  ob_benchmark_0.launch.py  ob_benchmark_1.launch.py
orbbec_camera/examples/disparity_search_offset/: README.MD
orbbec_camera/examples/gmsl_camera/: README.MD  gemini345_lg.launch.py  gemini_330_gmsl.launch.py  multi_gmsl_camera.launch.py  multi_gmsl_camera_synced.launch.py
orbbec_camera/examples/interleave_ae_mode/: README.MD
orbbec_camera/examples/lower_cpu_usage/: README.MD  gemini_330_series_lower_cpu_usage.launch.py  multi_camera_lower_cpu_usage.launch.py
orbbec_camera/examples/multi_camera/: README.MD  multi_camera.MD
orbbec_camera/examples/multi_camera_synced/: README.MD
orbbec_camera/launch/: astra.launch.py  astra.launch.xml  astra2.launch.py  astra2.launch.xml  astra_adv.launch.py  astra_adv.launch.xml  astra_embedded_s.launch.py  astra_embedded_s.launch.xml  astra_mini.launch.xml  astra_mini_pro.launch.xml  astra_plus.launch.py  astra_pro2.launch.py  astra_pro_plus.launch.py  astra_pro_plus.launch.xml  astra_stereo_u3.launch.py  astra_stereo_u3.launch.xml  dabai.launch.py  dabai.launch.xml  dabai_a.launch.py  dabai_al.launch  dabai_al.launch.py  dabai_d1.launch.py  dabai_d1.launch.xml  dabai_dcl.py  dabai_dcw.launch.py  dabai_dcw.launch.xml  dabai_dcw2.launch.py  dabai_dw.launch.py  dabai_dw.launch.xml  dabai_dw2.launch.py  dabai_max.launch.py  dabai_max_pro.launch.py  dabai_pro.launch.py  deeya.launch.py  deeya.launch.xml  femto.launch.py  femto.launch.xml  femto.luanch.py  femto_bolt.launch.py  femto_mega.launch.py  (+50 more)
orbbec_camera/params/: astra_plus_params.yaml  femto_params.yaml  ob_camera_params.yaml  orbbec_camera_params.yaml
orbbec_camera/rviz/: multi_camera.rviz  pointcloud.rviz
orbbec_camera/scripts/: 99-obsensor-libusb.rules  common_benchmark_node.py  default_service.yaml  echo_extrintisics.py  echo_extrintisics.sh  generate_orbbec_launch.sh  group_image.py  install.sh  install_udev_rules.sh  lidar_init.py  list_ob_devices.sh  monitor_fd.sh  plot_stat.py  receive_pc.py  save_images.sh  service_benchmark_node.cpp  service_benchmark_node.py  set_camera_exposure.py  set_camera_gain.py  static_transforms_publisher.py
orbbec_camera/src/: cloud_accumulated.cpp  d2c_viewer.cpp  device_ctrl_service.cpp  dynamic_params.cpp  gst_decoder.cpp  image_publisher.cpp  jetson_nv_decoder.cpp  jpeg_decoder.cpp  list_camera_profile.cpp  list_depth_work_mode.cpp  list_devices_node.cpp  main.cpp  mjpeg_decoder.cpp  ob_camera_node.cpp  ob_camera_node_driver.cpp  ob_camera_node_factory.cpp  ob_cleanup_shm.cpp  ob_lidar_node.cpp  ob_point_cloud_publisher.cpp  rk_mpp_decoder.cpp  ros_param_backend.cpp  ros_service.cpp  synced_imu_publisher.cpp  utils.cpp
orbbec_camera/tools/: frame_latency.cpp  frame_latency.hpp  list_camera_profile.cpp  list_depth_work_mode.cpp  list_devices_node.cpp  mega_h26x_decode_node.cpp  metadata_export_files.cpp  metadata_export_files.hpp  metadata_save_files.cpp  metadata_save_files.hpp  multi_save_cloud_node.cpp  multi_save_cloud_node.hpp  multi_save_rgbir.cpp  multi_save_rgbir_node.cpp  multi_save_rgbir_node.hpp  ob_benchmark.cpp  set_device_ip.cpp  start_benchmark.cpp  start_multi_sync.sh  topic_statistics.cpp  topic_statistics.hpp
orbbec_camera_msgs/: .make_deb.sh  CHANGELOG.rst  CMakeLists.txt  package.xml
orbbec_camera_msgs/msg/: DeviceInfo.msg  DeviceStatus.msg  Header.msg  IMUInfo.msg  Image1m.msg  Image2m.msg  Image4m.msg  Image8m.msg  Metadata.msg  PointCloud16m.msg  PointCloud1m.msg  PointCloud2m.msg  PointCloud4m.msg  PointCloud8m.msg  PointField.msg
orbbec_camera_msgs/srv/: CameraTrigger.srv  GetBool.srv  GetCameraInfo.srv  GetCameraParams.srv  GetDeviceInfo.srv  GetDeviceList.srv  GetInt32.srv  GetString.srv  GetUserCalibParams.srv  SetArrays.srv  SetCameraParams.srv  SetFilter.srv  SetInt32.srv  SetString.srv  SetUserCalibParams.srv
orbbec_camera_py/: package.xml  setup.cfg  setup.py
orbbec_camera_py/launch/: orbbec_camera_trigger.launch.xml
orbbec_camera_py/orbbec_camera_py/: run_orbbec_trigger.py
(+1006 files in other folders)
