<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orbbec_camera_py</name>
  <version>0.1.0</version>
  <description>Test python nodes for orbbec.</description>
  <maintainer email="asaini@locusrobotics.com">Amritpal Saini</maintainer>
  <license>Proprietary</license>

  <depend>orbbec_camera_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>

  <exec_depend>message_filters</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
